--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -4,19 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Favicon en la pestaña web con la imagen de Marvel Comics.-->
     <link rel="icon" href="img/logo.png" type="image/png">
+    <!--Nombre de la pestaña web: "Tabla Periódica Marvel".-->
     <title>Tabla Periódica Marvel</title>
 </head>
 
-<body align="center" bgcolor="red">
+<!--Imitando el modelo, color de fondo de la web: rojo. Todo centrado.-->
+<body bgcolor="red" align="center">
 
+    <!--Título de nivel 1 en color blanco.-->
     <h1><font face="Arial" color="white">Miembros Fundadores de Marvel</font></h1>
 
+    <!--Medidas de la tabla: 770x440px.-->
     <table border="1px" bgcolor="black" align="center" width="770px" height="440px" cellspacing="0">
 
         <tr>
+            <!--Medidas de las celdas: 100x100px.-->
             <td align="center" width="100px" height="100px">
+                <!--Nombres de los personajes con <figcaption>, con el tamaño por defecto.
+                    Imitando el modelo, se añade fuente Impact en color blanco.-->
                 <figcaption><font face="Impact" color="white">Ca</font></figcaption>
+                <!--Inserción de las imágenes desde la carpeta img.-->
                 <img src="img/Ca.png">
             </td>
             <td align="center" width="100px" height="100px">
@@ -24,6 +33,8 @@
                 <img src="img/Dd.png">
             </td>
             <td align="center" width="400px" height="100px" colspan="4">
+                <!--Texto de “Tabla Periódica Marvel” con tipografía color gold
+                    y un tamaño de 10px.-->
                 <font face="Impact" color="gold" size="10px">Tabla Periódica Marvel</font>
             </td>
             <td align="center" width="100px" height="100px">
@@ -96,36 +107,36 @@
 
         <tr>
             <td align="center" width="200px" height="100px" colspan="2">
+                <!--Al pinchar en la foto de Marvel Comics, nos redirigirá a
+                    https://www.superhero-exhibition.com/es en una pestaña nueva.-->
                 <a href="https://www.superhero-exhibition.com/es/" target="_blank">
+                    <!--La imagen se ajusta a la altura de la celda, pero no al ancho.-->
                     <img src="img/logo.png" height="100%">
                 </a>
             </td>
             <td align="center" width="100px" height="100px">
-                <figcaption>
-                    <font face="Impact" color="white">Bp</font>
-                </figcaption>
+                <figcaption><font face="Impact" color="white">Bp</font></figcaption>
                 <img src="img/Bp.png">
             </td>
             <td align="center" width="100px" height="100px">
-                <figcaption>
-                    <font face="Impact" color="white">Gr</font>
-                </figcaption>
+                <figcaption><font face="Impact" color="white">Gr</font></figcaption>
                 <img src="img/Gr.png">
             </td>
             <td align="center" width="100px" height="100px">
-                <figcaption>
-                    <font face="Impact" color="white">Ds</font>
-                </figcaption>
+                <figcaption><font face="Impact" color="white">Ds</font></figcaption>
                 <img src="img/Ds.png">
             </td>
             <td align="center" width="200px" height="100px" colspan="2">
+                <!--Al pinchar en la foto de Stan Lee, nos redirigirá a
+                    https://es.wikipedia.org/wiki/Stan_Lee en una pestaña nueva.-->
                 <a href="https://es.wikipedia.org/wiki/Stan_Lee" target="_blank">
+                    <!--La imagen se ajusta tanto a la altura cuanto al ancho de la celda.-->
                     <img src="img/stanlee.jpg" width="100%" height="100%">
                 </a>
             </td>
         </tr>
 
     </table>
-    
+
 </body>
 </html>
